refactoring swagger folder
