# app/api/controllers/productController.js
@@ -67,4 +67,21 @@ export const productController = {
             next(new APIError('Internal server error', 500));
         }
     },
+
+    /**
+     * Return a json response with all products available presents in the database.
+     * @param {Request} request 
+     * @param {Response} response  
+     * @param {NextFunction} next
+     */
+    allProductAvailable: async function (request, response, next) {
+        try {
+            const products = await productDataMapper.findAllProductAvailable();
+
+            response.json( products );
+
+        } catch(error) {
+            next(new APIError('Internal server error', 500));
+        }
+    },
 };
