# app/api/routers/product.router.js
@@ -18,4 +18,9 @@ apiProductRouter.param('id', productMiddleware.loadProduct);
 apiProductRouter.get('/:id(\\d+)', productController.oneProduct);
 apiProductRouter.put('/:id(\\d+)', productValidate.validateBody, productController.updateProduct);
 
+/**
+ * Route : /api/products/available
+ */
+apiProductRouter.get('/available', productController.allProductAvailable);
+
 export { apiProductRouter };
